<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    <!-- 标题 -->
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
     <TextView android:layout_width="150dp"
           android:layout_height="39dp"
           android:layout_marginTop="20dp"
           android:layout_marginLeft="80dp"
           android:textSize="30dp"
           android:textStyle="bold"
           android:text="@string/exchangeSetting"/>
     
</RelativeLayout>
    <!-- 标题 end -->
    
    <!-- 汇率设定 -->
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
 >
 <TextView android:layout_width="110dp"
           android:layout_height="30dp"
           android:layout_marginTop="20dp"
           android:layout_marginLeft="35dp"
           android:textSize="22dp"
           android:textStyle="bold"
           android:text="@string/lblSetExchange"/>
 
 <EditText android:layout_width="120dp"
           android:layout_height="39dp"
           android:layout_marginTop="17dp"
           android:layout_marginLeft="160dp"
           android:hint="@string/strNull"
           android:id="@+id/txtExchange"
           android:inputType="numberDecimal"
           />
</RelativeLayout>
   <!-- 汇率设定 end -->

    <!-- 按钮：确定与返回 -->
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
 
  <Button  android:layout_width="60dp"
           android:layout_height="35dp"
           android:layout_marginTop="20dp"
           android:layout_marginLeft="65dp"
           android:id="@+id/btnConfirm"
           android:text="@string/btnConfirm"   />
    
  <Button  android:layout_width="60dp"
           android:layout_height="35dp"
           android:layout_marginTop="20dp"
           android:layout_marginLeft="190dp"
           android:id="@+id/btnBack"
           android:text="@string/btnBack"   />

</RelativeLayout>
<!-- 确定与返回end -->

</LinearLayout>